# mav_avero

./: .gitignore  README.md
install/: avero_install_base.rosinstall
install/INSTALL_PATH/: .rosinstall  setup.sh
mav_avero/: CMakeLists.txt  package.xml
nodes/avero_ctrl/: CMakeLists.txt  package.xml
nodes/avero_ctrl/include/: AveroTestingNode.h
nodes/avero_ctrl/launch/: launch_AveroFlyNode.launch  launch_AveroSimCtrl.launch  launch_only_controller_params.launch  launch_testing.launch
nodes/avero_ctrl/resources/: filter_params.yaml  max_errors.yaml  max_wrench.yaml  model_params.yaml  pid_gains.yaml  pseudo_inv.yaml
nodes/avero_ctrl/src/: A.cpp  AllocationInterface.h  AveroAllocationTest.cpp  AveroAllocator.h  AveroAllocatorOld.cpp  AveroController.h  AveroFlyNode.cpp  AveroRLNode.py  AveroRLNodeSetpoint.py  AveroSimulationNode.cpp  AveroTestingNode.cpp  Helperfunctions.h  HomeNozzles.cpp  allocation_functions.cpp  home_nozzle  mav_avero.code-workspace  test_trajectory_pub.cpp
nodes/avero_ctrl/src/allocation_cpp_random/: A_new_cpp.cpp  T_BGi_symbolicstuff.m  allocation_wrench_for_the_fifth_time.cpp  python_eval.py  torques_again.cpp  wrench_new_sim.cpp
nodes/avero_ctrl/src/allocation_python_new/: A_new_sim.txt  allocation_functions_cartesian_new_sim.py  allocation_matrix_import_new_sim.py  allocation_new_sim.py  helper_functions_symb_new_sim.py
nodes/avero_ctrl/src/allocation_python_old/: A.txt  A_rowwise  allocation.py  allocation_functions_cartesian.py  allocation_functions_spherical.py  allocation_matrix_import.py  allocation_wrench_publisher_test.py  joy_to_wrench.py  torques.py
nodes/avero_joy/: CMakeLists.txt  package.xml
nodes/avero_joy/launch/: joy_to_odom.launch  joy_to_wrench.launch
nodes/avero_joy/resources/: joystick_params.yaml
nodes/avero_joy/src/: joy_to_odom.cpp  joy_to_wrench.cpp
nodes/avero_msgs/: CMakeLists.txt  package.xml
nodes/avero_msgs/msg/: Vector6d.msg  Vector9d.msg  hover_test_msg.msg  testing_msg.msg
nodes/avero_sim/: CMakeLists.txt  package.xml
nodes/avero_sim/config/: avero_first_try.rviz  drone_rviz.rviz
nodes/avero_sim/launch/: avero_core_sim.launch  drone_gazebo.launch  drone_gazebo_RL.launch  drone_gazebo_jto.launch  drone_rviz.launch  swivel_nozzle_gazebo.launch  swivel_nozzle_rviz.launch
nodes/avero_sim/meshes/: CollisionFrameV1.stl  Frame_V3.stl  NozzleV1.stl  Nozzle_base_V3.stl  Nozzle_top_V3.stl
nodes/avero_sim/rviz/: drone_gazebo.rviz
nodes/avero_sim/src/: drone_angles_to_motor.py  drone_joy_to_chi.py  swivel_angles_to_motor.py  swivel_joy_to_chi.py  test_joint_traj_pub.cpp  tf_publisher.cpp
nodes/avero_sim/urdf/: drone.xacro  drone_V3.xacro  joint_coordinates  swivel_nozzle.xacro  swivel_nozzle_V3.xacro
nodes/avero_sim/worlds/: avero.world
nodes/avero_state_est/: CMakeLists.txt  package.xml
nodes/avero_state_est/config/: msf_vicon.yaml
nodes/avero_state_est/launch/: msf_vicon.launch  msf_vicon_dummy.launch
nodes/avero_state_est/scripts/: init_msf.py
nodes/avero_state_est/src/: dummy_vicon_publisher.cpp
nodes/avero_testing/: CMakeLists.txt  package.xml
nodes/avero_testing/include/: avero_thrust_testing.h
nodes/avero_testing/launch/: avero_thrust_testing.launch
nodes/avero_testing/src/: avero_thrust_testing.cc  avero_thrust_testing.cpp
nodes/avero_trajectory_gen/: CMakeLists.txt  package.xml
nodes/avero_trajectory_gen/cfg/: avero_params.yaml
nodes/avero_trajectory_gen/include/avero_trajectory_gen/: avero_planner.h
nodes/avero_trajectory_gen/launch/: drone_trajectory.launch  example.launch  planner.launch  simulation.launch
nodes/avero_trajectory_gen/src/: planner.cpp  planner_node.cpp  trajectory_to_odom.cpp
nodes/avero_trajectory_gen/trajectories/: 00 README  6D_test.yaml  fly_an_eight.yaml  fly_on_back.yaml  trajectory_btn1.yaml  trajectory_btn10.yaml  trajectory_btn11.yaml  trajectory_btn12.yaml  trajectory_btn2.yaml  trajectory_btn3.yaml  trajectory_btn4.yaml  trajectory_btn5.yaml  trajectory_btn7.yaml  trajectory_btn8.yaml  trajectory_btn9.yaml
nodes/dynamixel_pkg_avero/: CMakeLists.txt  README.md  package.xml
nodes/dynamixel_pkg_avero/launch/: dynamixel_launch.launch
nodes/dynamixel_pkg_avero/src/joy_stick/: joy_to_array.py
nodes/dynamixel_pkg_avero/src/nodes/: degree_to_clicks.py  distributor_class.py  dtc_distributor.py  read_write_node.py
nodes/dynamixel_pkg_avero/src/nodes/in_kin_new_angles/: helper_functions_symb.py  inv_kin_new_angles.py  testing _my_matrices.py
nodes/dynamixel_pkg_avero/src/nodes/in_kin_new_angles/setup/: Jac, angles simplifyed.txt  calculate_jacobian_simply.py  main_in_kin_sym_test.py
nodes/dynamixel_pkg_avero/src/nodes/in_kin_new_angles/testing/: debugging_file.txt  plot_jacobian_elements.py  q2_to_tilt_angle.py  test_inv_kin.py  testing_forward_kinematics.py  testing_inverse_kinematics.py
nodes/imu_to_nozzle/: CMakeLists.txt  package.xml
nodes/imu_to_nozzle/launch/: imu_to_nozzle.launch
nodes/imu_to_nozzle/src/: 2023-12-10-20-40-28.bag  converter_node.py  visualization_node.py  world_to_body_to_nozzle.py
