<package format="2">
  <name>mav_avero</name>
  <version>2.0.0</version>
  <description>Controller, Simulation and Testing programs for the AVERO MAV</description>
  <maintainer email="descobardelrio@gmail.com">Dennis Escobar del Rio</maintainer>
  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Libraries-->
  <!-- Add library packages - the ones in the message -->
  <depend>avero_ctrl</depend>
  <depend>avero_joy</depend>
  <depend>avero_msgs</depend>
  <depend>avero_sim</depend>
  <depend>avero_state_est</depend> 
  <depend>avero_testing</depend>
  <depend>dynamixel_pkg_avero</depend>
  <depend>imu_to_nozzle</depend>

  <export>
    <metapackage/>
  </export>
  
</package>