<?xml version="1.0"?>
<package format="2">
  <name>avero_ctrl</name>
  <version>0.0.1</version>
  <description>The avero_ctrl package</description>

  <maintainer email="denrio@ethz.ch">denrio</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>

  <depend>omav_hovery_core</depend>
  <depend>omav_hovery_drivers</depend>
  <depend>omav_hovery_ros</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>avero_msgs</depend>
  <depend>mav_msgs</depend>
</package>