<?xml version="1.0"?>
<package format="2">
  <name>avero_joy</name>
  <version>0.0.1</version>
  <description>The avero_joy package</description>

  <maintainer email="denrio@ethz.ch">denrio</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  
</package>