<?xml version="1.0"?>
<package format="2">
  <name>avero_sim</name>
  <version>0.0.0</version>
  <description>The avero_sim package</description>

  <maintainer email="descobardelrio@gmail.com">denrio</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>mav_comm</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
