<?xml version="1.0"?>
<package format="2">
  <name>avero_testing</name>
  <version>0.0.0</version>
  <description>The avero_testing package</description>
  <maintainer email="lawick@ethz.ch">lawick</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
     
  <depend>omav_hovery_core</depend>
  <depend>omav_hovery_drivers</depend>
  <depend>omav_hovery_ros</depend>
  <depend>dynamic_reconfigure</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
